# semi-markov

./: .gitignore  MANIFEST.in  README.md  outline.md  pyproject.toml  requirements.txt  setup.py
semi_markov/: __init__.py  __init__.pyi  accelerator.py  accelerator.pyi  emission.py  emission.pyi  model.py  model.pyi  utils.py  utils.pyi
semi_markov/ext/: forward_backward.c  utils.h  viterbi.c
